@@ -14,6 +14,7 @@ Version : 4.12.1 #XG1
 - Add Landtiles Zoom Form
 - Add Texture editor for tiles incorporated into the textures.
 - Add Picture Preview
+- Add Added color change so you can change the pixel colors.
 
 Version : 4.12.0 #XG1
 - Update to net8.
